k8s/services/assetgenerator/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: assetgenerator
  namespace: korczewski-services
  labels:
    app: assetgenerator
    app.kubernetes.io/name: assetgenerator
    app.kubernetes.io/component: assetgenerator
    app.kubernetes.io/part-of: korczewski
    tier: services
spec:
  type: ClusterIP
  ports:
    - port: 5200
      targetPort: 5200
      protocol: TCP
      name: http
  selector:
    app: assetgenerator
